--- a/build.gradle
+++ b/build.gradle
@@ -8,9 +8,16 @@ version '1.0-SNAPSHOT'
 sourceCompatibility = 1.8
 
 repositories {
+    maven {
+        url = 'https://maven.aliyun.com/repository/public'
+    }
     mavenCentral()
 }
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    compile 'org.springframework:spring-core:5.3.8'
+    compile 'org.springframework:spring-context:5.3.8'
+    compile 'org.springframework:spring-beans:5.3.8'
+    compile 'org.springframework:spring-expression:5.3.8'
 }
