--- a/build.gradle
+++ b/build.gradle
@@ -20,4 +20,5 @@ dependencies {
     compile 'org.springframework:spring-context:5.3.8'
     compile 'org.springframework:spring-beans:5.3.8'
     compile 'org.springframework:spring-expression:5.3.8'
+    compile 'org.aspectj:aspectjweaver:1.9.4'
 }
